fixed so 1. the sal is now mobile friendly and introduced jump.js, now we will start init it

--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -1,5 +1,5 @@
 .masthead {
-  height: 95vh;
+  height: 100vh;
   min-height: 500px;
   background-image: url("Masthead-drone.jpg");
   background-size: cover;
